---
source: book/tests/snapshot.rs
expression: "let newest_employees = (\n  from employees\n  sort tenure\n  take 50\n)\n\nlet average_salaries = (\n  from salaries\n  group country (\n    aggregate average_country_salary = (average salary)\n  )\n)\n\nfrom newest_employees\njoin average_salaries [==country]\nselect [name, salary, average_country_salary]\n"
---
let newest_employees = (
  from employees
  sort tenure
  take 50
)



let average_salaries = (
  from salaries
  group country (
  aggregate (
  average_country_salary = average salary
)
)
)



from newest_employees
join average_salaries [==country]
select [
  name,
  salary,
  average_country_salary,
]



